# AIComics

./: .dockerignore  .env.production.example  .gitignore  AGENTS.override.md  CHANGELOG.md  Dockerfile  Dockerfile.comfyui-sidecar  LICENSE  PROMO_CONTENT.md  README.md  SERVICE.md  docker-compose.local-providers.yml  docker-compose.production.local-providers.yml  docker-compose.production.yml  docker-compose.yml  plan.md  pyproject.toml  release_notes_v020.md  requirements-lock.txt  result.md  status.json
.github/: pull_request_template.md
.gstack/: browse-audit.jsonl
ai-comics-cli/: .gitignore  README.md  pyproject.toml
ai-comics-cli/src/aicomics/: __init__.py  __main__.py  cli.py
ai-comics-cli/templates/: default.json
config/: aicomic_comfyui_paths.yaml  edition.yaml  global.yaml  project.yaml  providers.yaml  render.yaml  web.development.yaml  web.production.docker.yaml  web.production.example.yaml
deploy/: README.md  aicomic-production-config.secret.example.yaml
docs/: AIComics下一轮迭代功能清单_20260719.md  AI漫画开源趋势差距分析报告_20260719.md  FIX_social-auto-upload-deps.md  ai_script_engine_design.md  blender_integration_feasibility.md  comfyui_speed_optimization.md  comfyui_video_workflow_guide.md  n8n_pipeline_integration.md  openspace_integration.md  quality_prompt_template.md  remotion_integration_plan.md  roadmap.md  video_director_review.md  wan22_install_status.md  wan22_migration_plan.md
manifests/: episode_manifest.json  project_manifest.json  season_manifest.json  zombie_episode_manifest.json
product_assets/: deep_competitive_scan.md  final_gate_review_20260719.md  final_reality_check_20260719.md  security_audit_report.md  video_production_report.md
reports/: E01_navigator.html  ai_comics_industry_report_2026.md  competitor_analysis_2026.md  dashboard.html  gumroad_listing_guide.md  monetization_strategy.md  money_opportunities.md  open_source_launch_posts.md  product_packaging.md  quality_tracker.md  review_metrics.html  social_publish_guide.md  ux_audit_report.md
scripts/: README.md  fix_e01_e02_placeholders.py  generate_all_remaining.py  generate_e03_missing.py  generate_e04_e05.py  generate_remaining.py  manage_comfyui_image_cache.py  manage_comfyui_service.py  manage_local_provider_stack.sh  manage_local_web_stack.sh  money_loop.py  quality_gate_loop.py  recover_frontend_dev.ps1  review_horror_sample_assets.py  run_comfyui_sidecar.py  run_demo_validation.py  run_dependency_audit.py  run_docker_validation.sh  run_frontend_visual_qa_chrome.mjs  run_local_piper.py  run_local_provider_live_smoke.py  run_mock_comfyui_server.py  run_piper_http_server.py  run_style_batch.py  serve_frontend_spa.py  start_edge_cdp.ps1  validate_auth_flow.py  validate_batch_dispatch_execution_plan.py  validate_batch_dispatch_strategy.py  validate_batch_execution_archive_management.py  validate_batch_execution_operations_report.py  validate_batch_execution_preview_api.py  validate_batch_execution_queue_api.py  validate_batch_execution_queue_status_flow.py  (+39 more)
(+235 files in other folders)
