[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aicomic-system"
version = "0.4.0"
description = "AI漫剧自动生成系统 — 一人公司视频工厂"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    {name = "Eric", email = "eric@aicomics.dev"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
license = "MIT"
dependencies = [
    "fastapi>=0.139,<1",
    "uvicorn>=0.51,<1",
    "httpx>=0.28,<1",
    "pyyaml>=6.0,<7",
]

[project.optional-dependencies]
web = []
validation = [
    "imageio>=2.37,<3",
    "imageio-ffmpeg>=0.6,<1",
    "numpy>=2,<3",
    "pillow>=12.3,<13",
    "pip-audit>=2.10.1,<3",
    "websocket-client>=1.9,<2",
]
local-providers = [
    "piper-tts==1.5.0",
]

[project.scripts]
aicomic = "aicomic.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
